@@ -384,3 +384,29 @@ print.form <- function(x, length.line){
     }
   }
 }
+
+# check_propagation_correct_class: helper function
+# Function checks if the class and storage mode (type) of an object match 
+# and corrects its class attribute if not
+#
+# A mismatch can occur if a pseries of lower class and type logical or interger
+# are propagated to higher type by an arithmetic operation as R's arithmetic
+# operations do not change the first value of class attribute for
+# c("pseries", "logical/integer").
+# E.g.
+#  x <- c(1L, 2L, 3L)
+#  x + 1.5
+# results in class propagation from class "integer" to "numeric" 
+# but not if x is of class c("pseries", "interger")
+check_propagation_correct_class <- function(x) {
+  # x: a pseries object (usually)
+  if (any((pos <- inherits(x, c("logical" ,"integer", "numeric"), which = TRUE)) > 0)) {
+    pos <- pos[pos > 0] # non-matches in inherits(..., which = TRUE) results in 0
+    switch(typeof(x),
+           "double"  = { attr(x, "class")[pos] <- "numeric" },
+           "integer" = { attr(x, "class")[pos] <- "integer" },
+           "complex" = { attr(x, "class")[pos] <- "complex" }
+    )
+  }
+  return(x)
+}
